[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexadian-auth-common"
version = "0.1.0"
description = "Shared JWT validation, FastAPI auth dependencies, and user context for Hexadian services."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyjwt>=2.8,<3",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "httpx>=0.27",
    "ruff>=0.9",
    "diff-cover>=9,<10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hexadian_auth_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["hexadian_auth_common"]

[tool.coverage.report]
show_missing = true
